--- a/srcs/.env
+++ b/srcs/.env
@@ -1,6 +1,6 @@
 DOMAIN_NAME=rwegat.42.fr
-CERT_=./requirements/tools/rwegat.42.fr.crt
-KEY_=./requirements/tools/rwegat.42.fr.key
+CERT_= /etc/data/ssl/rwegat.42.fr.crt
+KEY_=/etc/data/ssl/rwegat.42.fr.key
 USER=rwegat
 DB_NAME=wordpress
 DB_ROOT=rootpass
