--- a/srcs/.env
+++ b/srcs/.env
@@ -1,5 +1,5 @@
 DOMAIN_NAME=rwegat.42.fr
-CERT_= /etc/data/ssl/rwegat.42.fr.crt
+CERT_=/etc/data/ssl/rwegat.42.fr.crt
 KEY_=/etc/data/ssl/rwegat.42.fr.key
 USER=rwegat
 DB_NAME=wordpress
